[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Cryptorix"
version = "1.1.0"
description = "A Python package that provides robust encryption and decryption mechanisms, utilizing AES, FERNET, JWE, Hybrid Encryption, AWS KMS, and AWS Secrets Manager."
authors = [
    { name = "M Santhosh Kumar", email = "santhoshse7en@gmail.com" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "AES", "FERNET", "JWE", "Hybrid Encryption", "KMS", "Secrets Manager",
    "Encryption", "Decryption", "AWS", "Security", "Cryptography"
]
dependencies = [
    "cryptography>=45.0.7",
    "jwcrypto>=1.5.6",
    "pycryptodome>=3.23.0",
    "boto3>=1.40.23"
]

[project.urls]
Documentation = "https://github.com/santhoshse7en/cryptorix#readme"
Source = "https://github.com/santhoshse7en/cryptorix"
Tracker = "https://github.com/santhoshse7en/cryptorix/issues"

[tool.setuptools]
packages = ["Cryptorix"]
include-package-data = true

[tool.setuptools.package-data]
Cryptorix = ["*.py"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
